Add more e2e tests